iptables/rules.v6
# Generated by xtables-save v1.8.2 
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -i eth1 -p tcp -m tcp --dport 53 -j DNAT --to-destination 2601:111:111:111::1
-A PREROUTING -i eth1 -p udp -m udp --dport 53 -j DNAT --to-destination 2601:111:111:111::1
COMMIT
# Completed
# Generated by xtables-save v1.8.2
*filter
:INPUT ACCEPT [658737:249154695]
:FORWARD ACCEPT [6859867:1453407341]
:OUTPUT ACCEPT [554951:65052571]
-A INPUT -i eth0 -p ipv6-icmp -j ACCEPT
-A INPUT -i eth0 -m conntrack --ctstate NEW -m udp -p udp --dport 546 -d fe80::/64 -j ACCEPT
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -j DROP
-A FORWARD -i eth0 -p ipv6-icmp -j ACCEPT
-A FORWARD -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -j DROP
-A FORWARD -i eth1 -m tcp -p tcp --dport 853 -j DROP
-A FORWARD -i eth1 -m udp -p udp --dport 853 -j DROP
COMMIT
# Completed
